src- Version 4.19/objects/Revenue_Period__c.object
<CustomObject>
    <fields>
        <fullName>Deferred_Balance_Actual__c</fullName>
        <label>Deferred Balance (Actual)</label>
        <summarizedField>Revenue_Transaction__c.Deferred_Balance__c</summarizedField>
        <summaryForeignKey>Revenue_Transaction__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deferred_Balance_Projected__c</fullName>
        <label>Deferred Balance (Projected)</label>
        <summarizedField>Revenue_Forecast__c.Deferred_Balance__c</summarizedField>
        <summaryForeignKey>Revenue_Forecast__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount_Actual__c</fullName>
        <label>Revenue Amount (Actual)</label>
        <summarizedField>Revenue_Transaction__c.Revenue_Amount__c</summarizedField>
        <summaryForeignKey>Revenue_Transaction__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount_Projected__c</fullName>
        <label>Revenue Amount (Projected)</label>
        <summarizedField>Revenue_Forecast__c.Revenue_Amount__c</summarizedField>
        <summaryForeignKey>Revenue_Forecast__c.Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_End_Date__c</fullName>
        <label>Revenue Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_Start_Date__c</fullName>
        <label>Revenue Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Revenue_Period_Start_Date__c</columns>
        <columns>Revenue_Period_End_Date__c</columns>
        <columns>Revenue_Period_Closed__c</columns>
        <columns>Revenue_Amount_Projected__c</columns>
        <columns>Deferred_Balance_Projected__c</columns>
        <columns>Revenue_Amount_Actual__c</columns>
        <columns>Deferred_Balance_Actual__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Revenue Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Changes_cannot_be_made_to_Closed_Periods</fullName>
        <active>true</active>
        <description>The revenue period details cannot be changed once the period is closed</description>
        <errorConditionFormula>(
ISCHANGED(Revenue_Amount_Actual__c) 
|| 
ISCHANGED(Deferred_Balance_Actual__c)
||
ISCHANGED(Revenue_Amount_Projected__c)
|| 
ISCHANGED(Deferred_Balance_Projected__c) 
||
ISCHANGED(Revenue_Period_Start_Date__c) 
||
ISCHANGED(Revenue_Period_End_Date__c) 
)
&amp;&amp;  
Revenue_Period_Closed__c</errorConditionFormula>
        <errorMessage>This revenue period is closed. You cannot add/remove revenue transactions against a closed period.</errorMessage>
    </validationRules>
</CustomObject>